// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Description /> shows the correct snapshot tree for the <Description> block 1`] = `
.glamor-2,
[data-glamor-2] {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: column;
  margin-top: 8px;
  margin-bottom: 8px;
  color: currentColor;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -webkit-flex-direction: column;
}

.glamor-0,
[data-glamor-0] {
  font-size: 14px;
  font-weight: 600;
  text-transform: uppercase;
  color: currentColor;
}

.glamor-1,
[data-glamor-1] {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  align-items: center;
  margin-left: 0;
  font-size: 16px;
  font-weight: 200;
  color: currentColor;
  -webkit-box-align: center;
  -webkit-align-items: center;
}

<dl
  className="glamor-2"
>
  <dt
    className="glamor-0"
  >
    Term
  </dt>
  <dd
    className="glamor-1"
  >
    <span>
      Definition
    </span>
  </dd>
</dl>
`;

exports[`<Description /> shows the correct snapshot tree for the <Description> block as a row 1`] = `
.glamor-1,
[data-glamor-1] {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  align-items: center;
  margin-left: 0;
  font-size: 16px;
  font-weight: 200;
  color: currentColor;
  -webkit-box-align: center;
  -webkit-align-items: center;
}

.glamor-2,
[data-glamor-2] {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: column;
  margin-top: 8px;
  margin-bottom: 8px;
  color: currentColor;
  flex-flow: row nowrap;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -webkit-flex-direction: column;
  -webkit-flex-flow: row nowrap;
}

.glamor-0,
[data-glamor-0] {
  font-size: 14px;
  font-weight: 600;
  text-transform: uppercase;
  color: currentColor;
  min-width: 192px;
}

<dl
  className="glamor-2"
>
  <dt
    className="glamor-0"
  >
    Term Row
  </dt>
  <dd
    className="glamor-1"
  >
    <span>
      Definition Row
    </span>
  </dd>
</dl>
`;
